--- a/angular.json
+++ b/angular.json
@@ -84,8 +84,7 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "polyfills": [
-              "zone.js",
-              "zone.js/testing"
+              "src/polyfills"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
